crates/data-dict/tests/snapshots/validate_spec__s07_range_on_string_type.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s07-range-on-string-type.yaml\")"
---
Error: [S07] String, number, and ID columns must not use `range`.
    ╭─[ spec/s07-range-on-string-type.yaml:12:15 ]
    │
 12 │       - name: c
    │               ┬  
    │               ╰── `t.c` has type `string` but uses `range`
────╯
